...
      content: SizedBox(
        height: 29.h,
        width: 100.w,
        child: Column(
          children: [
            CustomTextFormField(
              key: const Key('add_todo_title'),
              onTextChanged: (value){
                todoEntity.title = value;
              },
              hint: 'title'.tr,
              autoFocus: true,
            ),
...
                      if(todoEntity.title.isEmpty){
                        Get.dialog(AlertDialog(content: Text('add_todo_error_title_empty'.tr),));
                      }else{
                        Get.back(result: todoEntity);
                      }
                    },
                    key: const Key('add_todo_btn'),
                    child: Text('add'.tr),
                  ),
                  SizedBox(width: 12.w,),
                  ElevatedButton(
                    style: ElevatedButton.styleFrom(
                      onSurface: Colors.white,
...
