...
              ),
              backgroundColor: const Color(0xFF395ad2),
            ),
          ),
          Expanded(
              child: PersistentTabView(
            key: const Key('bottom_nav_bar'),
            context,
            controller: _mainPageController.mainTabController,
            screens: buildScreens(),
            items: navBarsItems(),
            onItemSelected: (index) {
              _mainPageController.onTabViewChanged(index);
...
    ];
  }

  List<PersistentBottomNavBarItem> navBarsItems() {
    return [
      PersistentBottomNavBarItem(
        icon: const Icon(Icons.home, key: Key('bottom_nav_all')),
        title: ('all'.tr),
        activeColorPrimary: CupertinoColors.activeBlue,
        inactiveColorPrimary: CupertinoColors.systemGrey,
      ),
      PersistentBottomNavBarItem(
        icon: const Icon(CupertinoIcons.check_mark_circled, key: Key('bottom_nav_completed')),
...
