...
                                    _controller.onPressedDelete(todo);
                                  },
                                  padding: const EdgeInsets.all(5),
                                  autoClose: true,
                                  icon: Icons.delete,
                                  label: 'delete'.tr,
                                  key: const Key('delete_todo_button'),
                                ),
                              ],
                            ),

                            // The child of the Slidable is what the user sees when the
                            // component is not dragged.
...
